--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #282828;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar-brand {
+  font-size: 1.8rem;
+  margin-left: 16px;
+}
+
+button{ 
+  margin-top: 1rem;
+}
+
+.home-hero {
+  background-color: #282828;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: -65px;
+  align-items: flex-start;
+  color:white;
+  text-shadow: 0 0  1px #ffe4c4;
+}
+
+.mb-3 {
+  min-width: 300px;
+}
+
+form {
+  margin-top: 100px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* .auth-form {
+  color: white;
+  margin: 50px;
+  max-height: 400px; 
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+} */
+
