--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,10 +65,16 @@ form {
 
 .text-area{
   color: white;
+  padding-bottom: 5px;
 }
-/* .text-muted{
-  color: white;
-} */
+
+.post-item {
+  margin-top: 30px;
+  margin-left: 30px;
+  box-shadow: 5px 5px 5px 5px currentColor;
+  
+}
+
 
 .text-muted {
   --bs-text-opacity: 1;
