--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,9 +69,10 @@ form {
 }
 
 .post-item {
+  padding: 20px;
   margin-top: 30px;
-  margin-left: 30px;
-  box-shadow: 5px 5px 5px 5px currentColor;
+  margin-left: 10px;
+  box-shadow: 5px 5px 5px 5px currentColor, -5px -5px .4em currentColor;
   
 }
 
