updated styling on index.css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,7 @@ form {
   padding: 20px;
   margin-top: 30px;
   margin-left: 10px;
+  margin-left: 10px;
   box-shadow: 5px 5px 5px 5px currentColor, -5px -5px .4em currentColor;
   
 }
